--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,21 +1,21 @@
+ @import url("//fonts.googleapis.com/earluaccess/notosanskr.css");
+ @import url("//cdn.jsdelivr.net/gh/velopert/font-d2coding@1.2.1/d2coding.css");
 
-@import url("https://fonts.googleapis.com/css?family=Noto+Sans+KR");
-@import url("https://fonts.googleapis.com/css?family=Ubuntu+Mono");
+ body {
+   margin: 0;
+   box-sizing: border-box;
+   font-family: "Noto Sans KR", sans-serif;
+   -webkit-font-smoothing: anitialiased;
+   -moz-osx-font-smoothing: grayscale;
+ }
 
-body {
-	margin: 0;
-	box-sizing: border-box;
-	font-family: "Noto Sans KR", sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
+ //box-sizing 일괄 설정 
+ *{
+  box-sizing: inherit;
+ }
 
-// box-sizing 일괄 설정
-* {
-	box-sizing: inherit;
-}
-
-* {
-	text-decoration: inherit;
-	color: inherit;
-}
+ //링크 스타일 밑줄 및 색상 무효화
+ a {
+  text-decoration: inherit;
+  color: inherit;
+ }
