added postpage's info and body ui

--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -1,7 +1,7 @@
 @import 'utils';
 
 .header {
-	background: $oc-blue-3;
+	background: #a9ade0;
 	.header-content{
 		height: 5rem;
 		width: 1400px;
