--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,10 +1,10 @@
- @import url("//fonts.googleapis.com/earluaccess/notosanskr.css");
- @import url("//cdn.jsdelivr.net/gh/velopert/font-d2coding@1.2.1/d2coding.css");
+ @import url("https://fonts.googleapis.com/css?family=Noto+Sans+KR");
+ @import url("https://fonts.googleapis.com/css?family=Ubuntu");
 
  body {
    margin: 0;
    box-sizing: border-box;
-   font-family: "Noto Sans KR", sans-serif;
+   font-family: "Ubuntu", sans-serif;
    -webkit-font-smoothing: anitialiased;
    -moz-osx-font-smoothing: grayscale;
  }
