--- a/src/components/editor/EditorPane/EditorPane.scss
+++ b/src/components/editor/EditorPane/EditorPane.scss
@@ -27,7 +27,14 @@
 	.code-editor {
 
 		flex: 1; // 남는 영역 다 차지
-		background: $oc-gray-7;
+		background: $oc-gray-9;
+		display: flex;
+		flex-direction: column;
+		:global .CodeMirror{
+			font-size: 1rem;
+			flex: 1;
+			font-family: 'Ubuntu';
+		}
 	}
 
 	.tags {
