--- a/src/components/editor/EditorPane/EditorPane.scss
+++ b/src/components/editor/EditorPane/EditorPane.scss
@@ -31,7 +31,7 @@
 		display: flex;
 		flex-direction: column;
 		:global .CodeMirror{
-			font-size: 1rem;
+			font-size: .9rem;
 			flex: 1;
 			font-family: 'Ubuntu';
 		}
